--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="app-header">
-  <h4> {{title}} </h4>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h4>{{title}}</h4>
+      </div>
+      <div class="col">
+        <!-- <button class="btn btn-success btn-logout">Logout</button> -->
+      </div>
+    </div>
+  </div>
 </div>
- <router-outlet></router-outlet>
+<router-outlet></router-outlet>
