--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,18 @@
 .app-header{
     margin: 0 auto 10px 0;
-    padding: 15px 0;
+    padding: 10px 0;
     display: block;
     text-align: center;
     background: #000;
     h4{
         font-size: 20px;
         color: #fff;
+        margin: 0;
+        padding: 0;
+    }
+    .btn-logout{
+        padding: 5px 7px;
+        margin: 10px;
+        font-size: 12px;
     }
 }
