--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,14 @@
 .content{
     margin: 20px 0 0 0;
 }
+
+.home-content{
+    ul{
+        margin: 0;
+        padding: 0;
+        li{
+            list-style-type: none;
+        }
+    }
+
+}
