--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -1,8 +1,8 @@
 <app-menu></app-menu>
 <div class="container">
     <div class="content">
-     Add wishlist <input type="text" class="col-sm-3 form-control" /><br/>
-     <button class="btn btn-success">Add</button>
+     Add wishlist <input #itemName type="text" class="col-sm-3 form-control" /><br/>
+     <button class="btn btn-success" (click)="add(itemName.value);itemName.value=''">Add</button>
     </div>
 </div>
 
