--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -2,19 +2,18 @@
 <div class="container">
     <div class="content">
         Add wishlist
-        <input #itemName type="text" class="col-sm-3 form-control" />
+        <input (keyup.enter)="add(itemName.value);itemName.value=''" #itemName type="text" class="col-sm-3 form-control" />
         <br/>
         <button class="btn btn-success" (click)="add(itemName.value);itemName.value=''">Add</button>
     </div>
-    <div class="content home-content">
+    <div class="content items-wrapper">
         <loading-spinner *ngIf="showSpinner"></loading-spinner>
-        <ul *ngFor="let item of items">
-            <li>
-                <p>
-                    <button class="btn btn-danger" (click)="delete(item)">remove</button>
-                    {{item.name}}
-                </p>
+        <ul class="d-flex flex-wrap">
+            <li *ngFor="let item of items">
+                <p><button class="btn btn-danger" (click)="delete(item)">remove</button>
+                    {{item.name}}</p>
             </li>
         </ul>
     </div>
-</div><!--end container-->
+</div>
+<!--end container-->
