--- a/src/app/manage/manage.component.scss
+++ b/src/app/manage/manage.component.scss
@@ -1,3 +1,16 @@
 .content{
     padding: 15px;
 }
+
+.items-wrapper{
+    ul{
+        margin: 0;
+        padding: 0;
+        li{
+            list-style-type: none;
+            background:  rgb(239,232,232);
+            margin: 20px;
+            // text-align: center;
+        }
+    }
+}
