--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,14 @@
 <div class="container">
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a routerLink="/home" routerLinkActive="active" class="nav-link">Dashboard</a>
-        </li>
-        <li class="nav-item">
-            <a routerLink="/manage" routerLinkActive="active" class="nav-link">Manage</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Feed</a>
-        </li>
-      </ul><!--end nav-tabs-->
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a routerLink="/home" routerLinkActive="active" class="nav-link">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="/manage" routerLinkActive="active" class="nav-link">Manage</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="/feed" routerLinkActive="active" class="nav-link">Feed</a>
+    </li>
+  </ul>
+  <!--end nav-tabs-->
 </div>
