--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -10,8 +10,8 @@
         <loading-spinner *ngIf="showSpinner"></loading-spinner>
         <ul class="d-flex flex-wrap">
             <li *ngFor="let item of items">
-                <p><button class="btn btn-danger" (click)="delete(item)">remove</button>
-                    {{item.name}}</p>
+                <i class="fa fa-trash" aria-hidden="true" (click)="delete(item)"></i>
+                {{item.name}}
             </li>
         </ul>
     </div>
