--- a/src/app/manage/manage.component.scss
+++ b/src/app/manage/manage.component.scss
@@ -9,8 +9,10 @@
         li{
             list-style-type: none;
             background:  rgb(239,232,232);
-            margin: 20px;
-            // text-align: center;
+            margin: 10px;
+            padding: 8px;
+            width: 100px;
+            height: 85px;
         }
     }
 }
