--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <h4>{{title}}</h4>
       </div>
       <div class="col">
-        <!-- <button class="btn btn-success btn-logout">Logout</button> -->
+          <i class="fa fa-power-off" aria-hidden="true" (click)="logout"></i>
       </div>
     </div>
   </div>
