--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,4 +15,10 @@
         margin: 10px;
         font-size: 12px;
     }
+    .fa-power-off{
+        color: #fff;
+        &:hover{
+            cursor: pointer;
+        }
+    }
 }
