--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -9,11 +9,20 @@
     <div class="content items-wrapper">
         <loading-spinner *ngIf="showSpinner"></loading-spinner>
         <ul class="d-flex flex-wrap">
-            <li *ngFor="let item of items">
+            <li *ngFor="let item of items" class="item-box col-2">
                 <i class="fa fa-trash" aria-hidden="true" (click)="delete(item)"></i>
+                <i class="fa fa-pencil" aria-hidden="true"></i>
                 {{item.name}}
+                <div class="d-flex align-items-end flex-column">
+                    <div class="mt-auto p-2">
+                        <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                    </div>
+                </div>
             </li>
         </ul>
+
+
+
     </div>
 </div>
 <!--end container-->
